@@ -1,0 +1,1 @@
+Tests the fix for issue http://java.net/jira/browse/JERSEY-1604
