@@ -3,7 +3,7 @@
 
    DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-   Copyright (c) 2010-2011 Oracle and/or its affiliates. All rights reserved.
+   Copyright (c) 2010-2013 Oracle and/or its affiliates. All rights reserved.
 
    The contents of this file are subject to the terms of either the GNU
    General Public License Version 2 only ("GPL") or the Common Development
@@ -59,6 +59,7 @@
         <module>JerseyIssue48</module>
         <module>JerseyIssue51</module>
         <module>JerseyIssue1373</module>
+        <module>JerseyIssue1604</module>
     </modules>
 
 </project>
